# pqkryvos

./: ARTIFACT-APPENDIX.md  Dockerfile  LICENSE  README.md  THIRD_PARTY_LICENSES
circom/: README.md
circom/circuits/: README.md
circom/circuits/benchmark/linearRelation/: linearRelationTest.circom
circom/circuits/src/CommitmentRelations/: linearRelation.circom
circom/circuits/src/crypto/: commitment.circom
circom/circuits/src/tallying/: utilities.circom
circom/circuits/src/utilities/: arithmetic.circom  assert_base_indices.circom  bitify.circom  branching.circom  cubicpolynomials.circom  listGates.circom  modq.circom  mult486.circom  polynomials.circom
circom/helper_scripts/: README.md  generate_input_skeleton.py  generate_r1cs.py  patch_randomness.py  witness_generation.py
circom/helper_scripts/comkey_patching/: comkey.json  generate_random_comkey.py  update_comkey.py
libiop/: CMakeLists.txt
libiop/libiop/: CMakeLists.txt
libiop/libiop/algebra/: fft.tcc
libiop/libiop/bcs/: bcs_common.tcc  bcs_prover.tcc
libiop/libiop/protocols/: ligero_iop.tcc
libiop/libiop/snark/: ligero_snark.tcc
libiop/main/: CMakeLists.txt  field_element_parser.hpp  main.cpp  r1cs_json_parser.hpp  r1cs_json_parser.tcc  witness_json_parser.hpp  witness_json_parser.tcc
test/: multiplication.circom
test/bn254/: witness.json
test/bn254/multiplication_cpp/: multiplication.cpp
test/goldilocks/: input.json  witness.wtns
test/goldilocks/multiplication_cpp/: Makefile  multiplication.cpp
test/goldilocks/multiplication_js/: multiplication.wasm
(+469 files in other folders)
